xiang shen ke de shi ping guo xin iPhone 14 zai mei guo bao chi le yu qu nian xiang tong de shou jia wo

--- a/date/2024-12/page-3.htm
+++ b/date/2024-12/page-3.htm
@@ -82,6 +82,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-12-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-12-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「12月8日」最高速度20.6M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-12-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月8日」最高速度20.6M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、香港、美国、日本、欧洲、加拿大、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-12-07">
+                                <div class="col-md-3">
+                                    <a href="/news/article-22509.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="SpringBoot中获取profile的方法详解_java" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-22509.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">SpringBoot中获取profile的方法详解_java</h3>
+                                    </a>
+                                    <p>目录  spring boot与profile  静态获取方式 autowire ProfileConfig     spring boot与profile spring boot 的项目中不再使用x</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-12-07">
+                                <div class="col-md-3">
+                                    <a href="/news/article-22507.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="使用Python实现KNN算法解决简单分类问题" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-22507.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">使用Python实现KNN算法解决简单分类问题</h3>
+                                    </a>
+                                    <p>KNN分类 KNN算法属于监督学习算法，它可以解决分类问题，也可以解决回归问题。对于一组带标签的数据，当我们使用KNN算法进行分类时，有两种分类方式。KNN的分类是有参照点的，它会参照周围的     </p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-12-07">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-12-7-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -173,47 +212,8 @@
                                     <p>这一次的节点更新覆盖了欧洲、美国、韩国、日本、新加坡、香港、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-12-04">
-                                <div class="col-md-3">
-                                    <a href="/news/article-21138.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="南平宠物救助站电话（南平动物救助站）" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-21138.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">南平宠物救助站电话（南平动物救助站）</h3>
-                                    </a>
-                                    <p>摘要：       本篇文章给大家谈谈南平宠物救助站电话，以及南平动物救助站对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、流浪猫救助中心电话2、...        本篇文章</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-12-04">
-                                <div class="col-md-3">
-                                    <a href="/news/article-21137.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="做狗粮的机器多少钱一台（狗粮加工厂投资多少钱）" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-21137.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">做狗粮的机器多少钱一台（狗粮加工厂投资多少钱）</h3>
-                                    </a>
-                                    <p>摘要：       今天给各位分享做狗粮的机器多少钱一台的知识，其中也会对狗粮加工厂投资多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、贝爵狗粮是天然粮.</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-12-04">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-12-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「12月4日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-12-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「12月4日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了加拿大、香港、日本、韩国、美国、欧洲、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/date/2024-12/page-2.htm">&laquo;</a></li> <li><a href="/date/2024-12/">1</a></li><li><a href="/date/2024-12/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2024-12/page-4.htm">4</a></li> <li><a href="/date/2024-12/page-4.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/date/2024-12/page-2.htm">&laquo;</a></li> <li><a href="/date/2024-12/">1</a></li><li><a href="/date/2024-12/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2024-12/page-4.htm">4</a></li><li><a href="/date/2024-12/page-5.htm">5</a></li> <li><a href="/date/2024-12/page-4.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -222,16 +222,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-8-free-subscribe-node.htm" title="「12月8日」最高速度20.6M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「12月8日」最高速度20.6M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-26-free-high-speed-nodes.htm" title="「11月26日」最高速度18.2M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「11月26日」最高速度18.2M/S，2024年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-31-node-share.htm" title="「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-9-free-v2ray.htm" title="「12月9日」最高速度21.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「12月9日」最高速度21.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-11-free-v2ray.htm" title="「12月11日」最高速度20.8M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「12月11日」最高速度20.8M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-16-node-share-links.htm" title="「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-15-free-high-speed-nodes.htm" title="「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-v2ray.htm" title="「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-23440.htm" title="宠物领养网站的设计与实现开题报告论文（宠物领养系统毕业设计）">宠物领养网站的设计与实现开题报告论文（宠物领养系统毕业设计）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-v2ray.htm" title="「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-22968.htm" title="宠物用品店代理（宠物用品店代理如何做）">宠物用品店代理（宠物用品店代理如何做）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-2-node-share-links.htm" title="「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月2日」最高速度20.6M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-27-free-node-subscribe.htm" title="「11月27日」最高速度18.4M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「11月27日」最高速度18.4M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-24821.htm" title="被猫抓不用***的图片（孩子10几天后才说被猫咬了）">被猫抓不用***的图片（孩子10几天后才说被猫咬了）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-5-clash-v2ray-ss-ssr.htm" title="「11月5日」最高速度18M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「11月5日」最高速度18M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-18-free-node-subscribe.htm" title="「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月18日」最高速度21.3M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-23-free-high-speed-nodes.htm" title="「11月23日」最高速度22.1M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「11月23日」最高速度22.1M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-19301.htm" title="动物防疫免税吗（我国动物防疫补助政策主要包括哪些）">动物防疫免税吗（我国动物防疫补助政策主要包括哪些）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-3-free-v2ray.htm" title="「11月3日」最高速度21.3M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「11月3日」最高速度21.3M/S，2024年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
