--- a/date/2024-10/page-2.htm
+++ b/date/2024-10/page-2.htm
@@ -222,16 +222,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-5-free-node-subscribe-links.htm" title="「12月5日」最高速度18.1M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「12月5日」最高速度18.1M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-20221.htm" title="宠物粮食店铺名称大全 宠物粮食店铺名称大全集">宠物粮食店铺名称大全 宠物粮食店铺名称大全集</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-v2ray-subscribe.htm" title="「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「9月12日」最高速度20.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-15-node-share.htm" title="「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「10月15日」最高速度20.7M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-19759.htm" title="猫咪三针疫苗多久能打完啊多少钱（猫咪三针疫苗间隔多久）">猫咪三针疫苗多久能打完啊多少钱（猫咪三针疫苗间隔多久）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-7-free-high-speed-nodes.htm" title="「11月7日」最高速度20.2M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「11月7日」最高速度20.2M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-25-free-subscribe-node.htm" title="「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-4-free-high-speed-nodes.htm" title="「10月4日」最高速度22.3M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「10月4日」最高速度22.3M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-v2ray.htm" title="「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「9月14日」最高速度20.8M/S，2024年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-9-free-v2ray.htm" title="「12月9日」最高速度21.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「12月9日」最高速度21.5M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-6-free-node-subscribe.htm" title="「12月6日」最高速度21.3M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「12月6日」最高速度21.3M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-13-free-subscribe-node.htm" title="「9月13日」最高速度22M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「9月13日」最高速度22M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray-subscribe.htm" title="「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-23-free-v2ray.htm" title="「10月23日」最高速度20.4M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「10月23日」最高速度20.4M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-19300.htm" title="安泰动物诊所嘉兴分店（安泰兽药怎么样）">安泰动物诊所嘉兴分店（安泰兽药怎么样）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-node-subscribe-links.htm" title="「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月25日」最高速度20.5M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-3-free-v2ray.htm" title="「10月3日」最高速度21.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「10月3日」最高速度21.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-29-free-node-subscribe-links.htm" title="「11月29日」最高速度21.4M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「11月29日」最高速度21.4M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-20679.htm" title="戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）">戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
