--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -222,16 +222,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-29-free-high-speed-nodes.htm" title="「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-node-subscribe.htm" title="「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月12日」最高速度21.2M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-22968.htm" title="宠物用品店代理（宠物用品店代理如何做）">宠物用品店代理（宠物用品店代理如何做）</a></li>
-                        <li class="py-2"><a href="/news/article-22509.htm" title="SpringBoot中获取profile的方法详解_java">SpringBoot中获取profile的方法详解_java</a></li>
-                        <li class="py-2"><a href="/news/article-19759.htm" title="猫咪三针疫苗多久能打完啊多少钱（猫咪三针疫苗间隔多久）">猫咪三针疫苗多久能打完啊多少钱（猫咪三针疫苗间隔多久）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-2-free-v2ray-subscribe.htm" title="「11月2日」最高速度18.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「11月2日」最高速度18.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-28-free-high-speed-nodes.htm" title="「11月28日」最高速度18.7M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「11月28日」最高速度18.7M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-20679.htm" title="戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）">戴尔设置第一启动项为ssd（戴尔设置硬盘第一启动）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-27-free-node-subscribe.htm" title="「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-23-node-share-links.htm" title="「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月23日」最高速度22.1M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-free-v2ray-subscribe.htm" title="「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-14-free-node-subscribe.htm" title="「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-13-free-v2ray.htm" title="「12月13日」最高速度22.2M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「12月13日」最高速度22.2M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-18-node-share-links.htm" title="「10月18日」最高速度21.7M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「10月18日」最高速度21.7M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-23890.htm" title="广州市宠物领养（广州宠物领养公众号）">广州市宠物领养（广州宠物领养公众号）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月21日」最高速度21.9M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-24336.htm" title="狐狸犬多少元一只（银狐犬属于什么档次）">狐狸犬多少元一只（银狐犬属于什么档次）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-30-free-v2ray-subscribe.htm" title="「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-6-free-v2ray.htm" title="「10月6日」最高速度21.4M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「10月6日」最高速度21.4M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-25745.htm" title="附近领养狗狗在哪里 附近领养狗狗在哪里">附近领养狗狗在哪里 附近领养狗狗在哪里</a></li>
                     </ul>
     </div>
 </div>
@@ -243,7 +243,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
